--- a/main.css
+++ b/main.css
@@ -1,272 +1,534 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700;900&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Bad+Script&family=Poppins:wght@500;600&display=swap');
+    .nav a{
+        position: relative;
+        text-decoration:none;
+        font-family: 'Poppins',sans-serif;
+        color:#a0a0a0;
+        font-size: 18px;
+        letter-spacing: 0.5px;
+        padding: 0 10px;
+    }
+    .nav a:after{
+        content:"";
+        position:absolute;
+        background-color:#39FF14;
+        height: 3px;
+        width:0;
+        left: 0;
+        bottom: -10px;
+        transition: 0.3s;
+    }
+    a:hover{
+        color:#000;
+    }
+    a:hover:after{
+        width: 100%;
+    }
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
 
-:root{
-    --white-light: rgba(255, 255, 255, 0.5);
-    --alice-blue: #f8f9fa;
-    --carribean-green: #40c9a2;
-    --gray: #ededed;
-}
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-body{
-    font-family: 'Quicksand', sans-serif;
-}
+    a{
+        text-decoration: none;
+    }
+    ul{
+        list-style:none;
+    }
+    header{
+        width:100%;
+    display: flex;
+    background-color: #222831;
+    justify-content: space-around;
+    padding: 1rem 0;
+    align-items:center;
+    z-index: 10000;
+    }
 
-/* Utility stylings */
-img{
-    width: 100%;
-    display: block;
-}
-.container{
-    width: 88vw;
-    margin: 0 auto;
-}
-.lg-title,
-.md-title,
-.sm-title{
-    font-family: 'Roboto', sans-serif;
-    padding: 0.6rem 0;
-    text-transform: capitalize;
-}
-.lg-title{
-    font-size: 2.5rem;
-    font-weight: 500;
-    text-align: center;
-    padding: 1.3rem 0;
-    opacity: 0.9;
-}
-.md-title{
-    font-size: 2rem;
-    font-family: 'Roboto', sans-serif;
-}
-.sm-title{
-    font-weight: 300;
-    font-size: 1rem;
-    text-transform: uppercase;
-}
-.text-light{
-    font-size: 1rem;
+    .logo{
+        display: flex;
+        align-items: center;
+
+    }
+    .logo img{
+        width:50px;
+        border-radius:  50%;
+        margin-right: 10px;
+    }
+
+    .header_logo {
+    color:#eeee;
     font-weight: 600;
-    line-height: 1.5;
-    opacity: 0.5;
-    margin: 0.4rem 0;
-}
+    }
 
-/* product section */
-.products{
-    background: var(--alice-blue);
-    padding: 3.2rem 0;
-}
-.products .text-light{
-    text-align: center;
-    width: 70%;
-    margin: 0.9rem auto;
-}
-.product{
-    margin: 2rem;
-    position: relative;
-}
-.product-content{
-    background: var(--gray);
-    padding: 3rem 0.5rem 2rem 0.5rem;
-    cursor: pointer;
-}
-.product-img{
-    background: var(--white-light);
-    box-shadow: 0 0 20px 10px var(--white-light);
-    width: 200px;
-    height: 200px;
-    margin: 0 auto;
-    border-radius: 50%;
-    transition: background 0.5s ease;
-}
-.product-btns{
-    display: flex;
-    justify-content: center;
-    margin-top: 1.4rem;
-    opacity: 0;
-    transition: opacity 0.6s ease;
-}
-.btn-cart, .btn-buy{
-    background: transparent;
-    border: 1px solid black;
-    padding: 0.8rem 0;
-    width: 125px;
-    font-family: inherit;
-    text-transform: uppercase;
-    cursor: pointer;
-    border: none;
-    transition: all 0.6s ease;
-}
-.btn-cart{
-    background: black;
-    color: white;
-}
-.btn-cart:hover{
-    background: var(--carribean-green);
-}
-.btn-buy{
-    background: white;
-}
-.btn-buy:hover{
-    background: var(--carribean-green);
-    color: #fff;
-}
-.product-info{
-    background: white;
-    padding: 2rem;
-}
-.product-info-top{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.rating span{
-    color: var(--carribean-green);
-}
-.product-name{
-    color: black;
-    display: block;
-    text-decoration: none;
-    font-size: 1rem;
-    text-transform: uppercase;
-    font-weight: bold;
-}
-.product-price{
-    padding-top: 0.6rem;
-    padding-right: 0.6rem;
-    display: inline-block;
-}
-.product-price:first-of-type{
-    text-decoration: line-through;
-    color: var(--carribean-green);
-}
-.product-img img{
-    transition: transform 0.6s ease;
-}
-.product:hover .product-img img{
-    transform: scale(1.1);
-}
-.product:hover .product-img{
-    background: var(--carribean-green);
-}
-.product:hover .product-btns{
-    opacity: 1;
-}
-.off-info .sm-title{
-    background: var(--carribean-green);
-    color: white;
-    display: inline-block;
-    padding: 0.5rem;
+    .nav__list{
+        display: flex;
+        align-items: center;
+    }
+    .nav__item{
+        margin: 0  8px;
+    }
+    .nav__link{
+        padding: 10px;
+        color: #eeee;
+        font-size: 0.9rem;
+        font-weight: 500;
+        border-radius: 5px;
+    }
+
+
+    .header__toggle,.header__close{
+        display: none;
+    }
+    @media screen and (max-width: 768px) {
+        header{
+            height: 48px;
+            justify-content: space-between;
+            padding:  0 28px;
+            z-index:100000;
+        }
+        .logo a {
+            font-size: 0.9rem;
+        }
+        .logo img{
+            width: 30px;
+        }
+        .header__toggle{
+            display: inline;
+            color:#eeee;
+            font-size:24px;
+        }
+        .header__close{
+            position:absolute;
+            right:24px;
+            display: block;
+            font-size: 24px;
+            border-radius:50%;
+        }
+        .header__close:hover{
+            background-color: #00adb5;
+        }
+        .nav{
+            position: fixed;
+            top:0;
+            right: -100%;
+            background-color: #222831;
+            color:#eeee;
+            width:60%;
+            height: 100vh;
+            padding: 24px 0;
+            z-index: 100000;
+            transition:0.5s ;
+            border-radius:0 0 0 50% ;
+        padding: 40px 80px;
+        }
+        .nav__list{
+            display: flex;
+            flex-direction: column;
+        }
+        .nav__item{
+            margin: 2rem 0;
+        }
+        .show{
+        right: 0; 
+        }
+        
+    }
+
+    header{
+     height: 10vh;
+        position: sticky;
+        top:0;
+        background-color:#222831;
+    }
+    #header.sticky{
+        background-color:#23e3c9;
+        position: sticky;
+        top:0;
+        padding: 15px 0 ;
+    }
+    .logo{
+    background-color: #39FF14;
+    }
+    /* home section styling */
+    #home_section{
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+        display: flex;
+        margin-right: 20vh;
+
+
+    }
+    body{
+        font-family: 'Poppins', sans-serif;
+        background-color: #23e3c9;
+    }
+    .slider{
+        margin-left: 100px;;
+        width: 80vh;
+        width: 80vh;
+        border-radius: 10px;
+        overflow: hidden;
+    }
+    .slides{
+        width: 500%;
+        height: 500px;
+        display: flex;
+    }
+    .slides input{
+        display: none;
+    }
+    .slide{
+        width: 20%;
+        transition: 2s;
+    }
+    .slide img {
+        width: 80vh;
+        height:50vh;
+    }
+    /* css for manual navigation */
+    .navigation-manual{
     position: absolute;
-    top: 0;
-    left: 0;
-    writing-mode: vertical-lr;
-    transform: rotate(180deg);
-    z-index: 1;
-    letter-spacing: 3px;
-    cursor: pointer;
-}
-
-/* product collection */
-.product-collection{
-    padding: 3.2rem 0;
-}
-.product-collection-wrapper{
-    padding: 3.2rem 0;
-}
-.product-col-left{
-    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3)), url("images/fashion-img-1.jpg") center/cover no-repeat;
-}
-.product-col-r-top{
-    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3)), url("images/fashion-img-2.png") center/cover no-repeat;
-}
-.flex{
+    width: 800px;
+    margin-top:  -40px;
     display: flex;
     justify-content: center;
-    align-items: flex-end;
-    height: 50vh;
-    padding: 2rem 1.5rem 3.2rem;
-    margin: 5px;
-}
-.product-col-r-bottom > div:first-child{
-    background: #eaa001;
-}
-.product-col-r-bottom > div:last-child{
-    background: #0090ff;
-}
-.product-col-content{
-    text-align: center;
-    color: white;
-}
-.product-collection .text-light{
-    opacity: 1;
-    font-size: 0.8;
-    font-weight: 400;
-    line-height: 1.7;
-}
-.btn-dark{
-    background: black;
-    color: white;
-    outline: 0;
-    border-radius: 25px;
-    padding: 0.7rem 1rem;
-    border: 0;
-    margin-top: 1rem;
-    cursor: pointer;
-    transition: all 0.6s ease;
-    font-size: 1rem;
-    font-family: inherit;
-}
-.btn-dark:hover{
-    background: var(--carribean-green);
-}
-
-
-
-
-
-
-
-/* Media Queries */
-@media screen and (min-width: 992px){
-    .product-items{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
     }
-    .product-col-r-bottom{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
+    .manual-btn{
+        width: 10px;
+        height: 10px;
+        border:  2px solid #40d3dc ;
+        border-radius: 10px;
+        cursor: pointer;
+        transition: 1s;
     }
-}
-@media screen and (min-width: 1200px){
-    .product-items{
-        grid-template-columns: repeat(3, 1fr);
+    .manual-btn:not(:last-child){
+        margin-right: 40px;
     }
-    .product{
-        margin-right: 1rem;
-        margin-left: 1rem;
+    .manual-btn:hover{
+        background: #40d3dc;
+    }
+
+    #radio1:checked ~ .first{
+        margin-left: 0;
+    }
+
+    #radio2:checked ~ .first{
+        margin-left: -20%;
+    }
+    #radio3:checked ~ .first{
+        margin-left: -40%;
+    }
+
+    /* /.css for automatic navigation */
+    .navigation-auto{
+        position: absolute;
+        display: flex;
+        width: 800px;
+        justify-content: center;
+        margin-top: 460px;
+    }
+    .navigation-auto div{
+        border: 2px solid #40d3dc;
+        padding: 5px;
+        border-radius:  10px;
+        transition: 1s;
+    }
+    .navigation-auto div:not(:last-child){
+        margin-right:  40px;
+    }
+    #radio1:checked ~ .navigation-auto .auto-btn1{
+    background: #40d3dc;
+    }
+    #radio2:checked ~ .navigation-auto .auto-btn2{
+    background: #40d3dc;
+    }
+    #radio3:checked ~ .navigation-auto .auto-btn3{
+        background: #40d3dc;
+    }
+    /* part */
+
+   
+
+    @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700;900&display=swap');
+
+    :root{
+        --white-light: rgba(255, 255, 255, 0.5);
+        --alice-blue: #f8f9fa;
+        --carribean-green: #40c9a2;
+        --gray: #ededed;
+    }
+    *{
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+    }
+    body{
+        font-family: 'Quicksand', sans-serif;
+    }
+    
+    /* Utility stylings */
+    img{
+        border-radius:  20%;
+        height:100%;
+        width: 95%;
+        display: block;
+    }
+    .container{
+        width: 88vw;
+        margin: 0 auto;
+    }
+    .lg-title,
+    .md-title,
+    .sm-title{
+        font-family: 'Roboto', sans-serif;
+        padding: 0.6rem 0;
+        text-transform: capitalize;
+    }
+    .lg-title{
+        font-size: 2.5rem;
+        font-weight: 500;
+        text-align: center;
+        padding: 1.3rem 0;
+        opacity: 0.9;
+    }
+    .md-title{
+        font-size: 2rem;
+        font-family: 'Roboto', sans-serif;
+    }
+    .sm-title{
+        font-weight: 300;
+        font-size: 1rem;
+        text-transform: uppercase;
+    }
+    .text-light{
+        font-size: 1rem;
+        font-weight: 600;
+        line-height: 1.5;
+        opacity: 0.5;
+        margin: 0.4rem 0;
+    }
+    
+    /* product section */
+    .products{
+        background: var(--alice-blue);
+        padding: 3.2rem 0;
     }
     .products .text-light{
-        width: 50%;
+        text-align: center;
+        width: 70%;
+        margin: 0.9rem auto;
     }
-}
-
-@media screen and (min-width: 1336px){
-    .product-items{
-        grid-template-columns: repeat(4, 1fr);
+    .product{
+        margin: 2rem;
+        position: relative;
+    }
+    .product-content{
+        background: var(--gray);
+        padding: 3rem 0.5rem 2rem 0.5rem;
+        cursor: pointer;
+    }
+    .product-img{
+        background: var(--white-light);
+        box-shadow: 0 0 20px 10px var(--white-light);
+        width: 200px;
+        height: 200px;
+        margin: 0 auto;
+        border-radius: 50%;
+        transition: background 0.5s ease;
+    }
+    .product-btns{
+        display: flex;
+        justify-content: center;
+        margin-top: 1.4rem;
+        opacity: 0;
+        transition: opacity 0.6s ease;
+    }
+    .btn-cart, .btn-buy{
+        background: transparent;
+        border: 1px solid black;
+        padding: 0.8rem 0;
+        width: 125px;
+        font-family: inherit;
+        text-transform: uppercase;
+        cursor: pointer;
+        border: none;
+        transition: all 0.6s ease;
+    }
+    .btn-cart{
+        background: black;
+        color: white;
+    }
+    .btn-cart:hover{
+        background: var(--carribean-green);
+    }
+    .btn-buy{
+        background: white;
+    }
+    .btn-buy:hover{
+        background: var(--carribean-green);
+        color: #fff;
+    }
+    .product-info{
+        background: white;
+        padding: 2rem;
+    }
+    .product-info-top{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .rating span{
+        color: var(--carribean-green);
+    }
+    .product-name{
+        color: black;
+        display: block;
+        text-decoration: none;
+        font-size: 1rem;
+        text-transform: uppercase;
+        font-weight: bold;
+    }
+    .product-price{
+        padding-top: 0.6rem;
+        padding-right: 0.6rem;
+        display: inline-block;
+    }
+    .product-price:first-of-type{
+        text-decoration: line-through;
+        color: var(--carribean-green);
+    }
+    .product-img img{
+        transition: transform 0.6s ease;
+    }
+    .product:hover .product-img img{
+        transform: scale(1.1);
+    }
+    .product:hover .product-img{
+        background: var(--carribean-green);
+    }
+    .product:hover .product-btns{
+        opacity: 1;
+    }
+    .off-info .sm-title{
+        background: var(--carribean-green);
+        color: white;
+        display: inline-block;
+        padding: 0.5rem;
+        position: absolute;
+        top: 0;
+        left: 0;
+        writing-mode: vertical-lr;
+        transform: rotate(180deg);
+        z-index: 1;
+        letter-spacing: 3px;
+        cursor: pointer;
+    }
+    
+    /* product collection */
+    .product-collection{
+        padding: 3.2rem 0;
     }
     .product-collection-wrapper{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-    }
-    .flex{
-        height: 60vh;
+        padding: 3.2rem 0;
     }
     .product-col-left{
-        height: 121.5vh;
+        background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3)), url("images/fashion-img-1.jpg") center/cover no-repeat;
     }
-}
+    .product-col-r-top{
+        background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3)), url("images/fashion-img-2.png") center/cover no-repeat;
+    }
+    .flex{
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        height: 50vh;
+        padding: 2rem 1.5rem 3.2rem;
+        margin: 5px;
+    }
+    .product-col-r-bottom > div:first-child{
+        background: #eaa001;
+    }
+    .product-col-r-bottom > div:last-child{
+        background: #0090ff;
+    }
+    .product-col-content{
+        text-align: center;
+        color: white;
+    }
+    .product-collection .text-light{
+        opacity: 1;
+        font-size: 0.8;
+        font-weight: 400;
+        line-height: 1.7;
+    }
+    .btn-dark{
+        background: black;
+        color: white;
+        outline: 0;
+        border-radius: 25px;
+        padding: 0.7rem 1rem;
+        border: 0;
+        margin-top: 1rem;
+        cursor: pointer;
+        transition: all 0.6s ease;
+        font-size: 1rem;
+        font-family: inherit;
+    }
+    .btn-dark:hover{
+        background: var(--carribean-green);
+    }
+    
+    
+    
+    
+    
+    
+    
+    /* Media Queries */
+    @media screen and (min-width: 992px){
+        .product-items{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+        }
+        .product-col-r-bottom{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+        }
+    }
+    @media screen and (min-width: 1200px){
+        .product-items{
+            grid-template-columns: repeat(3, 1fr);
+        }
+        .product{
+            margin-right: 1rem;
+            margin-left: 1rem;
+        }
+        .products .text-light{
+            width: 50%;
+        }
+    }
+    
+    @media screen and (min-width: 1336px){
+        .product-items{
+            grid-template-columns: repeat(4, 1fr);
+        }
+        .product-collection-wrapper{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+        }
+        .flex{
+            height: 60vh;
+        }
+        .product-col-left{
+            height: 121.5vh;
+        }
+    }
+    #home_section img{
+        border-radius: 0%;
+    }
+  
